# aoc24

./: .gitignore  LICENSE.txt  aoc  aoc.opam  dune-project  flake.nix  run
day01/: dune  main.ml
day02/: dune  main.ml
day03/: dune  main.ml
day04/: dune  main.ml
day05/: dune  main.ml
day06/: dune  main.ml
day07/: dune  main.ml
day08/: dune  main.ml
day09/: dune  main.ml
lib/: aoc.ml
