(lang dune 3.16)

(name aoc)

(generate_opam_files true)

(source
 (github bigspeedfpv/aoc24))

(authors "Andrew Brower <bigspeedfpv@gmail.com>")

(maintainers "Andrew Brower <bigspeedfpv@gmail.com>")

(license MIT)

(package
 (name aoc)
 (synopsis "Advent of Code 2024 solutions in OCaml")
 (description "Advent of Code 2024 solutions in OCaml")
 (depends ocaml dune)
 (tags
  (aoc aoc24 "advent of code")))

